do not use fixed time